# xi2annotator

./: .env  Pipfile  pyproject.toml  setup.cfg
.github/workflows/: publish.yml
tests/: conftest.py
tests/xi2annotator/: test_annotator.py
xi2annotator/: __init__.py  __main__.py  annotation.py  app.py  config.py  routes.py
